# apps-pack

./: .editorconfig  .gitignore  README.md  pack-metadata.yaml
.github/workflows/: build-image.yaml  docs-preview-cleanup.yml  docs.yml  lint.yaml  test.yaml
api/: Dockerfile  pyproject.toml
api/src/nebari_apps_api/: __init__.py  auth.py  config.py  cr.py  frameworks.py  k8s.py  main.py  models.py  upload.py
api/tests/: conftest.py  test_apps.py
charts/nebari-apps/: Chart.yaml  values.yaml
charts/nebari-apps/crds/: apps.nebari.dev_apps.yaml
charts/nebari-apps/templates/: NOTES.txt  _helpers.tpl  api.yaml  mcp.yaml  operator-deployment.yaml  operator-rbac.yaml  ui.yaml
dev/: Makefile
docs/: DESIGN.md  PLAN.md  astro.config.mjs  package.json
docs/test/: build.test.ts
examples/: README.md  python-git-app.yaml  python-inline-app.yaml  static-git-app.yaml  static-inline-app.yaml
examples/python-app/: app.py  nebari-app.yaml  pixi.toml
examples/site/: index.html
mcp/: Dockerfile  pyproject.toml
mcp/src/nebari_apps_mcp/: __init__.py  auth.py  client.py  config.py  server.py
mcp/tests/: conftest.py  test_token_verification.py  test_tools.py
operator/: Dockerfile  go.mod
operator/api/v1alpha1/: app_types.go  groupversion_info.go  zz_generated.deepcopy.go
operator/cmd/: main.go
operator/internal/controller/: app_controller.go  app_controller_test.go  frameworks.go  (+4 more)
skill/new-nebari-app/: SKILL.md
ui/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
ui/src/: index.css  main.tsx
(+52 files in other folders)
